@@ -2,7 +2,7 @@ Release info
 ============
 
 You can see the complete list of recent changes, bugfixes and new features
-in the http://pasky.or.cz/gitweb.cgi[gitweb interface]. See the ChangeLog
+in the http://repo.or.cz/w/elinks.git[gitweb interface]. See the ChangeLog
 file for details.
 
 ELinks 0.11.3.GIT now:
